[project]
name = "hubs"
version = "0.1.0"
description = "Understand the target audience"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "ruff>=0.11.8",
    "scikit-learn>=1.4.0",
    "shap>=0.44.0",
    "xgboost>=2.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pre-commit>=4.2.0",
]
